add getTop
